# Eidos

./: .gitignore  BUILD_FROM_SOURCE_WINDOWS.md  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/: EidosConfig.cmake.in  EidosConfigVersion.cmake
data/: iris.csv
demo/: CMakeLists.txt  iris_mlp.cpp  main.cpp  mnist_conv.cpp  mnist_mlp.cpp  run_mlp.cpp  run_mnist.cpp  vanilla_rnn.cpp
docs/: basic.md  data.md  experiments.md  layers_plus.md  utilities.md
include/: MSELoss.h  MyClass.h  activation_fns.h  activations.h  callback.h  console.hpp  conv_layer.h  cross_entropy_loss.h  csvparser.h  data_loader.h  debugger.hpp  dense_layer.h  generic_data_loader.h  imageProcessor.h  image_loader.h  layer.h  layers.h  loss.h  loss_fns.h  model.h  mse_loss.h  optimizer.h  regularization.h  relu.h  rnn_layer.h  tensor.hpp  utils.h
include/Eidos/: Eidos.h  activation_fns.h  console.hpp  csvparser.h  debugger.hpp  loss.h  loss_fns.h  optimizer.h  preprocessors.h  tensor.hpp
include/Eidos/layers/: dense_layer.h  flatten_layer.h  gru_layer.h  rnn_layer.h
include/Eidos/preprocessors/: image_loader.h
include/layers/: conv_layer.h  dense_layer.h  flatten_layer.h  gru_layer.h  pooling_layer.h  regularization.h  rnn_layer.h
include/preprocessors/: data_loader.h  image_loader.h  numeric_data_loader.h
sample/: Makefile  mnist_cnn.cpp  results.csv
src/: CMakeLists.txt  activation_fns.cpp  callback.cpp  console.cpp  conv_layer.cpp  cross_entropy_loss.cpp  csvparser.cpp  dense_layer.cpp  flatten_layer.cpp  generic_data_loader.cpp  gru_layer.cpp  imageProcessor.cpp  image_loader.cpp  image_processor.cpp  loss_fns.cpp  main.cpp  model.cpp  mse_loss.cpp  numeric_data_loader.cpp  optimizer.cpp  pooling_layer.cpp  regularization.cpp  rnn_layer.cpp  tmp.txt  utils.cpp
src/demo/: run_mlp.cpp  run_rnn.cpp
src/preprocessors/: numeric_data_loader.cpp
tests/: CMakeLists.txt  main.cpp  test_activation_fns.cpp  test_binary_classification.cpp  test_conv_layer.cpp  test_dense_layer.cpp  test_fc.cpp  test_fc.h  test_loss.cpp  test_loss.h  test_loss_fns.cpp  test_loss_functions.cpp
